--- a/Index.html
+++ b/Index.html
@@ -10,4 +10,4 @@
     });
 </script>
 <title>Jschedule</title>
-<link rel="apple-touch-icon-precomposed" href="img/icon.png"/>
+<link rel="apple-touch-icon-precomposed" href="icon.png"/>
