--- a/Index.html
+++ b/Index.html
@@ -11,4 +11,13 @@
 </script>
 <title>Jschedule</title>
 <link rel="apple-touch-icon-precomposed" href="icon.png"/>
+<html>
+  <head>
+    <title>Title of the document</title>
+  </head>
+  <body>
+    <h1>PDF Example</h1>
+    <p><a href="/132.pdf">Test</a>.</p>
+  </body>
+</html>
 #by:waisemthecrab
